feat(story): 更新故事章节结构添加AI转型相关内容
- 在多个故事章节中更新目录链接格式，统一使用中文逗号分隔
- 在系统架构演进章节中新增第八章"从管菜品到管能力"详细阐述DDD设计思路
- 更新系统架构演进图，区分基础设施线和业务建模线的发展路径
- 重新整理阿明十年演进历程表格，增加演进线分类和具体技术细节
- 在各章节末尾添加新的AI相关主题，涵盖组织转型、AI创业、自我进化等内容
- 更新架构演进思考问题，加入按能力和实体组织的判断标准
- 修正部分文字描述和术语表达，提高内容准确性